fixed overflow in the tab menu on mobile layout

--- a/styles/app/TabNav.module.scss
+++ b/styles/app/TabNav.module.scss
@@ -34,6 +34,7 @@
             max-width: Calc(100vw - 170px);
             text-overflow: ellipsis;
             overflow: hidden;
+            height: 1em;
         }
 
         .edit {
