--- a/styles/app/TabsMenu.module.scss
+++ b/styles/app/TabsMenu.module.scss
@@ -42,6 +42,13 @@
             margin-bottom: .3em;
             position: relative;
 
+            span {
+                width: Calc(100% - 60px);
+                text-overflow: ellipsis;
+                overflow: hidden;
+                height: 1em;
+            }
+
             .tabClickSurface {
                 position: absolute;
                 // border: 1px solid black;
